# fatima-prework

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh  test.sh
data/: hallucination.json  math.json  mcq.json  reversal.json  trolley_cultural.json
data/merged_hf/: README.md
scripts/: merge_data.py  run_model.py
src/: hallucination.py  math_reasoning.py  mcq.py  reversal.py  runner.py  trolley.py
