[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*", "scripts"]

[tool.ruff]
src            = ["src"]
target-version = "py312"

[tool.ruff.format]
docstring-code-format      = true # format code in docstrings
docstring-code-line-length = 88

[tool.ruff.lint]
exclude = ["*.ipynb", "data/*", "logs/*", "tmp/*", "venv/*", "scripts/*"]
extend-select = [
  "A",     # flake8-builtins (detects use of python builtins)
  "ASYNC", # flake8-async (common async issues)
  "B",   # flake8-bugbear, bugbear checks
  "D",   # pydocstyle, all functions and classes must have docstrings
  "E",   # pycodestyle errors
  "I",   # isort
  "N",   # pep8-naming conventions
  "PL", # pylint
  "PT",  # flakes8-pytest-style, pytest fixtures and style
  "PTH", # flake8-use-pathlib, use pathlib instead of os.path
  "S",     # flake8-bandit (security issues)
  "UP",    # Conform to latest Python PEP style guidelines
  "W",   # pycodestyle warnings
]
extend-fixable = ["ANN", "B", "D", "DOC", "E", "ICN", "LOG", "Q", "W"]
extend-safe-fixes = [
  "D",    # pydocstyle docstrings
  "DOC",  # pydoclint docstring conventions
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I002", # missing import
  "ICN",  # import conventions
  "LOG",  # logging conventions
  "Q",    # flake8-quotes
  "W"     # pycodestyle warnings
]
ignore = [
  "E501", # line too long
  "T201", # print ok
  "T203", # print statement ok
  "PLR2004", # pylint numeric constants
  "PLC0415"
]
flake8-type-checking.quote-annotations = true
isort.case-sensitive = true
pydocstyle.convention = "google"
pycodestyle.max-doc-length = 88

[tool.ruff.lint.flake8-annotations] # type annotations
ignore-fully-untyped = true # ignore fully untyped functions

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["D", "F401"]
"tests/*" = ["D", "S101"]  # Tests use assert, don't need full docstrings

[tool.uv]
python-downloads = "manual"         # change to "automatic" to download Python specified in .python-version
managed          = true

[tool.uv.pip]
upgrade-package  = ["ruff", "pre-commit"]

[dependency-groups]
dev = [
    "marimo>=0.18.0",
]
